@@ -3645,7 +3645,9 @@ ACE_OS::thread_mutex_trylock (ACE_thread_mutex_t *m)
 #   if defined (ACE_HAS_WIN32_TRYLOCK)
   BOOL result = ::TryEnterCriticalSection (m);
   if (result == TRUE)
-    return 0;
+    {
+      return 0;
+    }
   else
     {
       errno = EBUSY;
