@@ -2,8 +2,6 @@
 
 #include "ace/OS_NS_sys_socket.h"
 
-
-
 #if !defined (ACE_HAS_INLINED_OSCALLS)
 # include "ace/OS_NS_sys_socket.inl"
 #endif /* ACE_HAS_INLINED_OSCALLS */
